[project]
name = "anochat"
version = "0.1.0"
description = ""
authors = [
    {name = "GrehBan",email = "maximfeedback19@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "aiogram (>=3.23.0,<4.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "adaptix (>=3.0.0b11,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
